fix nav-bar to collapse sooner

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -55,8 +55,8 @@ img:hover {
 	border-right: 1px solid #f9f9f9;
 	color: #202020;
 	font-weight: bold;
-	padding-right: 40px;
-	padding-left: 40px;
+	padding-right: 30px;
+	padding-left: 30px;
 	line-height: 60px;
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
